--- a/dwitter/templates/base.html
+++ b/dwitter/templates/base.html
@@ -26,9 +26,8 @@
     <div class="container">
         <div class="columns">
 
-            {% block content %}
-
-            {% endblock content %}
+            {% block content %}{% endblock content %}
+            {% block extra_js %}{% endblock extra_js %}
 
         </div>
     </div>
